--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -1,15 +1,15 @@
 @import "./ThemeModes";
 // content pane
 .splitpanes.default-theme .splitpanes__pane{
-  background-color: var(--background-primary)!important;
+  background-color: var(--background-primary);
 }
 // middle segment
 .splitpanes.default-theme .splitpanes__splitter:before{
     content: "";
-    height:20px!important;
-    width:20px!important;
+    height:20px;
+    width:20px;
     border:1px solid lightyellow;
-    background-color: rgba(0,0,0,0)!important;
+    background-color: rgba(0,0,0,0);
 }
 .default-theme.splitpanes--vertical>.splitpanes__splitter:before, .default-theme .splitpanes--vertical>.splitpanes__splitter:before{
   margin-left:-10px;
