--- a/src/style/Table.scss
+++ b/src/style/Table.scss
@@ -1,62 +1,63 @@
 @import "./ThemeModes";
+
 $gridWidth: 200px;
 $tableBorder: 1px solid var(--border-primary);
 $dropDownBorder: 3px solid var(--border-primary);
-$color: white;
+
 .tableCard{
-	border-top: $tableBorder!important;
-	border-left: $tableBorder!important;
+	border-top: $tableBorder;
+	border-left: $tableBorder;
   input{
     max-width:25px;
   }
 	table {
-		border-top: $tableBorder!important;
+		border-top: $tableBorder;
     td {
       text-overflow: ellipsis;
     }
 	}
 	th {
-		border-bottom: $tableBorder!important;
-		border-right: $tableBorder!important;
+		border-bottom: $tableBorder;
+		border-right: $tableBorder;
 	}
 	td {
-		border-bottom: $tableBorder!important;
-		border-right: $tableBorder!important;
+		border-bottom: $tableBorder;
+		border-right: $tableBorder;
     overflow:scroll;
 	}
   .tableCard td a{
-    max-width:10px!important;
-    width:10px!important;
-    min-width:10px!important;
+    max-width:10px;
+    width:10px;
+    min-width:10px;
   }
   tfoot th {
-    font-weight: normal!important;
+    font-weight: normal;
   }
   .p-column-filter-row .p-column-filter-element{
-    flex-basis: initial!important;
-    flex-grow: 0!important;
-    flex-shrink:0!important;
+    flex-basis: initial;
+    flex-grow: 0;
+    flex-shrink:0;
   }
   .p-dropdown-panel{
-    border: $dropDownBorder!important;
+    border: $dropDownBorder;
   }
   .p-column-filter-row-items{
-    border: $dropDownBorder!important;
+    border: $dropDownBorder;
   }
   .p-paginator {
-    display: block!important;;
+    display: block;
   }
   .p-column-filter-row {
-    align-items:stretch!important;
-    text-align: left!important;
-    border-collapse: collapse!important;
+    align-items:stretch;
+    text-align: left;
+    border-collapse: collapse;
   }
   .p-column-filter-menu-button, .p-column-filter-clear-button {
-    padding: 0px!important;;
+    padding: 0px;
   }
   .p-datatable-header {
     border-right: $tableBorder;
-    user-select: none!important;
+    user-select: none;
   }
   .p-paginator-bottom{
     border-right: $tableBorder;
@@ -67,8 +68,8 @@ $color: white;
   }
 }
 .p-multiselect-panel{
-    border: $dropDownBorder!important;
-    background-color: $color!important;
+    border: $dropDownBorder;
+    background-color: white;
 }
 .p-button-icon-only{
   background:none;
