--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -11,8 +11,23 @@ $compWidth: 590px;
   background:none;
   border: $tableBorder;
 }
+html{
+  background: black;
+
+}
+:root {
+    --sat: env(safe-area-inset-top);
+    --sar: env(safe-area-inset-right);
+    --sab: env(safe-area-inset-bottom);
+    --sal: env(safe-area-inset-left);
+
+}
 #app{
-  min-height:100dvh;
+
+  max-height:calc(100dvh -20px);
+  min-height:calc(100dvh -20px);
+  height:calc(100dvh -20px);
+  max-width: 100dvw;
   min-width: 100dvw;
   position: fixed;
   margin:0;
@@ -59,9 +74,4 @@ a:visited {
 }
 .tableCard{
   overflow: scroll;
-}
- @media screen and (min-width:320px) and (max-width:767px){ 
-  .standalone{
-      padding-top: 43px!important;
-  }
 }
