--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -1,77 +1,39 @@
-@mixin font($font-family, $font-file) {
-  @font-face {
-    font-family: $font-family;
-    src: local($font-file+'.ttf');
-  }
-}
-@include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
 @import "./ThemeModes";
-$compWidth: 590px;
-.p-button-icon-only{
-  background:none;
-  border: $tableBorder;
-}
-html{
-  background: black;
 
-}
+$border:0px;
+$devH:100dvh;
+$devW:100dvw;
+html, body {
+  overscroll-behavior: none;
+  overflow: hidden;
+  margin:0;
+
+  #app {
+    position:relative;
+    background-color: var(--background-primary);
+    width: unquote("calc( #{$devW} - #{$border} )"); 
+    max-width: unquote("calc( #{$devW} - #{$border} )");
+    height:unquote("calc( #{$devH} - #{$border} )");
+    max-height: unquote("calc( #{$devH} - #{$border} )");
+
+    #contentMain{
+      height:calc(100% - 17px);
+      width: 100%;
+      position: absolute;
+    }
+    
+    a:link {
+      color:  var(--link)
+    }
+    a:visited {
+      color:  var(--link-visited)
+    }
+  }
+ }
+
 :root {
     --sat: env(safe-area-inset-top);
     --sar: env(safe-area-inset-right);
     --sab: env(safe-area-inset-bottom);
     --sal: env(safe-area-inset-left);
-
-}
-#app{
-
-  max-height:calc(100dvh -20px);
-  min-height:calc(100dvh -20px);
-  height:calc(100dvh -20px);
-  max-width: 100dvw;
-  min-width: 100dvw;
-  position: fixed;
-  margin:0;
-  padding:0;
-  text-align:left;
-  background-color: var(--background-primary);
-  color-scheme: var(--color-scheme);
-  -webkit-text-size-adjust: 100%;
-}
-.index{
-  max-height:100dvh;
-  max-width: 100dvw;
-  position: fixed;
-  margin:0;
-  padding:0;
-}
-body{
-  margin:0px;
-}
-canvas{
-  overflow:scroll;
-  min-width:100%;
-  max-width:100%;
-  border: 1px solid var(--border-primary);
-}
-* {
-  font-family: "ＭＳ Ｐゴシック";
-  font-weight: 1;
-  text-decoration:none;
-  color: var(--text-primary);
-}
-*::-webkit-scrollbar-track {
-  background:  var(--background-primary);
-  border:1px solid var(--border-primary);
-}
-*::-webkit-scrollbar-thumb {
-  background-color: rgba(132, 132, 147, 0.38);
-}
-a:link {
-  color:  var(--link)
-}
-a:visited {
-  color:  var(--link-visited)
-}
-.tableCard{
-  overflow: scroll;
 }
