--- a/src/style/Font.scss
+++ b/src/style/Font.scss
@@ -1,11 +1,13 @@
 @mixin font($font-family, $font-file) {
   @font-face {
     font-family: $font-family;
-    src: "http://3.130.240.169/MSGOTHIC.TTF";
+    src: url("http://3.130.240.169/MSGOTHIC.TTF") format("truetype");
   }
 }
 @include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
 * {
   font-family: "ＭＳ Ｐゴシック";
+  font-weight:400;
   color: var(--text-primary);
+  text-decoration: none;
 }
