--- a/src/style/Table.scss
+++ b/src/style/Table.scss
@@ -4,25 +4,22 @@ $tableBorder: 1px solid var(--border-primary);
 $dropDownBorder: 3px solid var(--border-primary);
 
 .tableCard{
-	border-top: $tableBorder;
-	border-left: $tableBorder;
+	outline: $tableBorder;
   height:100%;
   input{
     max-width:25px;
   }
 	table {
-		border-top: $tableBorder;
+		outline: $tableBorder;
     td {
       text-overflow: ellipsis;
     }
 	}
 	th {
-		border-bottom: $tableBorder;
-		border-right: $tableBorder;
+		outline: $tableBorder;
 	}
 	td {
-		border-bottom: $tableBorder;
-		border-right: $tableBorder;
+    outline: $tableBorder;
 	}
   .tableCard td a{
     max-width:10px;
@@ -38,10 +35,10 @@ $dropDownBorder: 3px solid var(--border-primary);
     flex-shrink:0;
   }
   .p-dropdown-panel{
-    border: $dropDownBorder;
+    outline: $dropDownBorder;
   }
   .p-column-filter-row-items{
-    border: $dropDownBorder;
+    outline: $dropDownBorder;
   }
   .p-paginator {
     display: block;
@@ -56,20 +53,19 @@ $dropDownBorder: 3px solid var(--border-primary);
     user-select: none;
   }
   .p-paginator-bottom{
-    border-right: $tableBorder;
-    border-bottom: $tableBorder;
+    outline: $tableBorder;
   }
   .p-datatable-header{
-    border-top: $tableBorder;
+    outline: $tableBorder;
   }
 }
 .p-multiselect-panel{
-    border: $dropDownBorder;
+    outline: $dropDownBorder;
     background-color: white;
 }
 .p-button-icon-only{
   background:none;
-  border: $tableBorder;
+  outline: $tableBorder;
 }
 .p-multiselect-label{
 }
