--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -1,20 +1,26 @@
 @import "./ThemeModes";
 
 .contentView{
+  position:inherit;
+  height:100%;
+  width:100%;
+  .p-dataview{
   height:100%;
   width:100%;
   .p-dataview-header{
     height:18.72px;
   }
   .p-dataview-content{
-
+  height:100%;
+  width:100%;
     .grid{
       justify-content: flex-end;
       align-content: flex-start;
       outline: 1px solid var(--border-primary);
-      height:calc(100% - 18.72px);
-      position:absolute;
+      max-height:100%;
+      max-height:100%;
       overflow-y:scroll;
+      position: absolute;
       
       .cgb-0{
         outline: 1px solid var(--border-primary);
@@ -36,4 +42,5 @@
       }
     }
   }
+}
 }
