--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -5,6 +5,7 @@
   --text-primary: #dfdfdfd3;
   --color-scheme: dark;
   --border-primary: #848493;
+  --border-secondary: #898997;
 }
 .theme-light {
   --background-primary: #ccc;
@@ -14,4 +15,5 @@
   --text-secondary: #718096;
   --color-scheme: light;
   --border-primary: #737373;
+  --border-secondary: #000;
 }
