--- a/src/style/WebKit.scss
+++ b/src/style/WebKit.scss
@@ -3,9 +3,11 @@
   -webkit-text-size-adjust: none;
 }
 *::-webkit-scrollbar-track {
-  background:  var(--background-primary);
   border:1px solid var(--border-primary);
 }
 *::-webkit-scrollbar-thumb {
   background-color: rgba(132, 132, 147, 0.38);
+}
+*::-webkit-scrollbar {
+  background-color: var(--background-primary); 
 }
