--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -4,42 +4,86 @@
   position:inherit;
   height:100%;
   width:100%;
-  .p-dataview{
-  height:100%;
-  width:100%;
-  .p-dataview-header{
-    height:18.72px;
-  }
-  .p-dataview-content{
-  height:100%;
-  width:100%;
-    .grid{
-      justify-content: flex-end;
-      align-content: flex-start;
-      outline: 1px solid var(--border-primary);
-      max-height:100%;
-      max-height:100%;
-      overflow-y:scroll;
-      position: absolute;
-      
-      .cgb-0{
-        outline: 1px solid var(--border-primary);
-        max-width:90px;
 
-        .cgb-0-img {
-          width: 100%;
-          max-height: 100px;
-          object-fit: contain;
+  .p-dataview{
+    height:100%;
+    width:100%;
+
+    .p-dataview-header{
+      height:18.72px;
+
+      .p-button-icon-only{
+        border:0;
+        outline: 1px solid var(--border-primary);
+      }
+    }
+    .p-dataview-content{
+      height:100%;
+      width:100%;
+
+      .grid{
+        justify-content: flex-end;
+        align-content: flex-start;
+        outline: 1px solid var(--border-primary);
+        max-height:calc(100% - 19px);
+        overflow-y:scroll;
+        position: absolute;
+        
+       // list 
+        .w-9{
+          width: 100% !important;
         }
 
-        .cgb-0-info{
-          overflow:hidden;
-          white-space: nowrap;
-          border-bottom: $tableBorder;
-          border-left: $tableBorder;
-          border-right: $tableBorder;
+        // grid
+        .cgb-0{
+          outline: 1px solid var(--border-primary);
+          max-width:90px;
+
+          .cgb-0-img {
+            width: 100%;
+            max-height: 100px;
+            object-fit: contain;
+          }
+
+          .cgb-0-info{
+            overflow:hidden;
+            white-space: nowrap;
+            border-bottom: $tableBorder;
+            border-left: $tableBorder;
+            border-right: $tableBorder;
+          }
         }
       }
+    }
+  }
+
+.lightbox{
+  border-bottom:$tableBorder;
+  width:100%;
+  height:30dvh;
+
+  button {
+    background-color: rgba(0,0,0,0);
+  }
+
+  .vue-load-image{
+    min-height:100%;
+    max-height:100%;
+    height:100%;
+    .w-9-load {
+      width:100%;
+      height:100%;
+      min-height:90%;
+      min-width:90%;
+      max-height: 100px;
+      object-fit: contain;
+    }
+    .overlayImg{
+      width:100%;
+      height:100%;
+      max-height:90%;
+      max-width:100%;
+      object-fit: contain;
     }
   }
 }
