--- a/src/style/old/Main.scss
+++ b/src/style/old/Main.scss
@@ -23,11 +23,10 @@ html{
 
 }
 #app{
-
   max-height:calc(100dvh -20px);
   min-height:calc(100dvh -20px);
   height:calc(100dvh -20px);
-  max-width: 100dvw;
+  max-width: calc(100dvw - 90px);
   min-width: 100dvw;
   position: fixed;
   margin:0;
