--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -10,6 +10,7 @@
     width:20px;
     border:1px solid lightyellow;
     background-color: rgba(0,0,0,0);
+    z-index: 1;
 }
 .default-theme.splitpanes--vertical>.splitpanes__splitter:before, .default-theme .splitpanes--vertical>.splitpanes__splitter:before{
   margin-left:-10px;
@@ -25,8 +26,13 @@
 }
 .splitpanes {
   overflow:none;
-
-
+  max-height:100%;
+.splitpanes__pane{
 
 }
 
+
+}
+.data_pane{
+  max-height:calc(100% - 103px)
+}
