--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -44,7 +44,7 @@ a:link {
       }
 
       .contentMain{
-        z-index:0;
+        z-index:0!important;
         width:calc(100% - 2px);
         height:unquote("calc( #{$hun} - (#{$border}))");
         overflow:hidden!important;
@@ -82,3 +82,57 @@ a:link {
     --sab: env(safe-area-inset-bottom);
     --sal: env(safe-area-inset-left);
 }
+
+.lightbox{
+  position:absolute!important;
+  height:100%;
+  width:100%;
+
+  .resizable-component{
+    position:absolute!important;
+    padding: 0;
+    border: 1px solid var(--border-primary);
+    background: var(--background-primary);
+    font-weight: normal;
+    z-index:2!important;
+
+    .block {
+      position:relative;
+      z-index:2!important;
+      width:100%;
+      height:100%;
+      max-width: 100%;
+      max-height: 100%;
+
+      img {
+        position:relative;
+        max-width: 100%;
+        max-height: calc(100% - 64px);
+        width: 100%;
+        height: calc(100% - 64px);
+        object-fit: contain;
+      }  
+      .drag-container-1,
+      .drag-container-2 {
+        width: 100%;
+        height: 30px;
+        text-align: center;
+        cursor: pointer;
+        z-index:2!important;
+      }
+
+      .drag-container-1{
+        border-bottom:1px solid var(--border-primary);
+      }
+      .drag-container-2{
+        border-top:1px solid var(--border-primary);
+      }
+
+    }
+  }
+}
+
+
+
+
+
