--- a/src/style/LightBox.scss
+++ b/src/style/LightBox.scss
@@ -20,15 +20,23 @@
       height:100%;
       max-width: 100%;
       max-height: 100%;
+      
+      .vue-load-image{
 
-      img {
-        position:relative;
-        max-width: 100%;
-        max-height: calc(100% - 64px);
-        width: 100%;
-        height: calc(100% - 64px);
-        object-fit: contain;
-      }  
+      position:relative;
+      width:100%;
+      height:100%;
+
+          max-height: calc(100% - 64px);
+        img {
+          position:relative;
+          max-width: 100%;
+          max-height: 100%;
+          width: 100%;
+          height: calc(100%);
+          object-fit: contain;
+        }  
+      }
       .drag-container-1,
       .drag-container-2 {
         width: 100%;
@@ -46,6 +54,37 @@
       }
 
     }
+    #rb{
+
+      max-height:80px;
+      max-width:80px;
+      position:absolute;
+      left: 50%;
+      transform: translate(-50%, 6px);
+    }
+    #rt{
+      max-height:80px;
+      max-width:80px;
+      position:absolute;
+      left: 50%;
+      transform: translate(-50%, -46px);
+    }
+    #rl{
+      max-height:80px;
+      max-width:80px;
+      position:absolute;
+      top: 50%;
+      transform: translate(-46px, -50%);
+    }
+    #rr{
+      max-height:80px;
+      max-width:80px;
+      position:absolute;
+      top: 50%;
+      transform: translate(6px, -50%);
+    }
+
+
   }
 }
 
