--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -39,6 +39,12 @@
           outline: 1px solid var(--border-primary);
           max-width:90px;
           min-width:90px;
+          .textContent{
+            width: 100%;
+            max-height: 100px;
+            overflow-y:auto;
+            overflow-x:hidden;
+          }
 
           .cgb-0-img {
             width: 100%;
