--- a/src/style/Font.scss
+++ b/src/style/Font.scss
@@ -11,4 +11,5 @@
   font-weight:400;
   color: var(--text-primary);
   text-decoration: none;
+  transition: color background background-color 1s!important;
 }
