--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -39,11 +39,13 @@
           outline: 1px solid var(--border-primary);
           max-width:90px;
           min-width:90px;
-          .textContent{
+
+          .cgb-0-txt{
             width: 100%;
             max-height: 100px;
             overflow-y:auto;
             overflow-x:hidden;
+            border-bottom: $tableBorder;
           }
 
           .cgb-0-img {
@@ -51,6 +53,8 @@
             max-height: 100px;
             object-fit: contain;
             z-index: 0;
+            border-bottom: $tableBorder;
+
           }
 
           .cgb-0-info{
