--- a/src/style/Font.scss
+++ b/src/style/Font.scss
@@ -1,7 +1,10 @@
 @mixin font($font-family, $font-file) {
   @font-face {
     font-family: $font-family;
-    src: url("http://3.130.240.169/msgothic_4-webfont.woff2") format("woff2");
+    src: 
+      url("@~/public/font/MS-Gothic.woff2") format("woff2"),
+      url("@~/public/font/MS-Gothic.woff") format("woff"),
+    ;
   }
 }
 @include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
