fixed double click activating single click, fully implemented lazy load

--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -7,7 +7,10 @@ $devW:100dvw;
 $iosTop: env(safe-area-inset-top, 0px);
 $border: 21px;
 $radius: 34.0pt;
-
+html {
+  background-color: var(--background-primary);
+  min-height:100dvh;
+}
 html, body {
   margin:0;
   overscroll-behavior: none;
