--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -1,5 +1,12 @@
 @import "./ThemeModes";
-
+@keyframes fadeIn {
+  from: { opacity: 0; }
+  to: { opacity: 1; }
+}
+.dropdown{
+  background-color: var(--background-primary);
+  color: var(--text-primary)!important;
+}
 .contentView{
   position:inherit;
   height:100%;
@@ -22,6 +29,7 @@
       width:100%;
 
       .grid{
+        height:100%;
         justify-content: flex-end;
         align-content: flex-start;
         outline: 1px solid var(--border-primary);
@@ -36,33 +44,45 @@
 
         // grid
         .cgb-0{
-          outline: 1px solid var(--border-primary);
-          max-width:90px;
-          min-width:90px;
-
-          .cgb-0-txt{
-            width: 100%;
-            max-height: 100px;
-            overflow-y:auto;
-            overflow-x:hidden;
-            border-bottom: $tableBorder;
+          
+          .cgb-loading{
+            animation: fadein 1s ease;
+            outline: 1px solid var(--border-primary);
+            max-width:90px;
+            min-width:90px;
+            min-height:140px;
           }
+          .cgb-loaded{
+            // animation: fadein .05s linear;
+            outline: 1px solid var(--border-primary);
+            max-width:90px;
+            min-width:90px;
+            min-height:140px;
 
-          .cgb-0-img {
-            width: 100%;
-            max-height: 100px;
-            object-fit: contain;
-            z-index: 0;
-            border-bottom: $tableBorder;
+            .cgb-0-txt{
+              width: 100%;
+              max-height: 100px;
+              overflow-y:auto;
+              overflow-x:hidden;
+              border-bottom: $tableBorder;
+            }
 
-          }
+            .cgb-0-img {
+              width: 100%;
+              max-height: 100px;
+              object-fit: contain;
+              z-index: 0;
+              border-bottom: $tableBorder;
 
-          .cgb-0-info{
-            overflow:hidden;
-            white-space: nowrap;
-            border-bottom: $tableBorder;
-            border-left: $tableBorder;
-            border-right: $tableBorder;
+            }
+
+            .cgb-0-info{
+              overflow:hidden;
+              white-space: nowrap;
+              border-bottom: $tableBorder;
+              border-left: $tableBorder;
+              border-right: $tableBorder;
+            }
           }
         }
       }
