--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -8,7 +8,7 @@
     content: "";
     height:20px;
     width:20px;
-    border:1px solid lightyellow;
+    border:1px solid var(--splitter-box);
     background-color: rgba(0,0,0,0);
     z-index: 1;
 }
