implemented mixtape viewer

--- a/src/style/Font.scss
+++ b/src/style/Font.scss
@@ -9,6 +9,7 @@
 * {
   font-family: "ＭＳ Ｐゴシック";
   font-weight:400;
+  font-style:bold;
   color: var(--text-primary);
   text-decoration: none;
   transition: color, background, background-color .13s!important;
