--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -4,18 +4,18 @@
   --link-visited: #aae574;
   --text-primary: #dfdfdfd3;
   --color-scheme: dark;
-  --border-primary: #848493;
-  --border-secondary: #898997;
+  --border-primary: #676776;
+  --border-secondary: #696967;
   --splitter-box: lightyellow;
 }
 .theme-light {
   --background-primary: rgb(255, 255, 255);
-  --link: green;
-  --link-visited: brown;
+  --link: #000;
+  --link-visited: #000;
   --text-primary: #000;
-  --text-secondary: #718096;
+  --text-secondary: #516076;
   --color-scheme: light;
-  --border-primary: #737373;
+  --border-primary: #535353;
   --border-secondary: #000;
 
   --splitter-box: purple;
