--- a/src/style/LightBox.scss
+++ b/src/style/LightBox.scss
@@ -26,7 +26,7 @@
         width:100%;
         height:100%;
         max-height: calc(100% - 64px);
-
+    white-space: pre-wrap;
         img {
           position:relative;
           max-width: 100%;
