--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -18,8 +18,7 @@
 
     .p-dataview-header{
       height:18.72px;
-
-            border-bottom: $tableBorder;
+      border-bottom: $tableBorder;
 
       .p-button-icon-only{
         border:0;
@@ -46,9 +45,26 @@
         .cgb-0{
           
           .cgb-loading{
+            outline: $tableBorder;
             max-width:90px;
             min-width:90px;
             min-height:140px;
+            
+            .cgb-0-txt{
+              width: 100%;
+              max-height: 100px;
+              overflow-y:auto;
+              overflow-x:hidden;
+              border-bottom: $tableBorder;
+            }
+
+            .cgb-0-info{
+              padding-top:102px;
+              overflow:hidden;
+              white-space: nowrap;
+              border-bottom: $tableBorder;
+            }
+
           }
           .cgb-loaded{
             outline: $tableBorder;
@@ -83,35 +99,4 @@
       }
     }
   }
-
-.lightbox{
-  border-bottom:$tableBorder;
-  width:100%;
-  height:30dvh;
-
-  button {
-    background-color: rgba(0,0,0,0);
-  }
-
-  .vue-load-image{
-    min-height:100%;
-    max-height:100%;
-    height:100%;
-    .w-9-load {
-      width:100%;
-      height:100%;
-      min-height:90%;
-      min-width:90%;
-      max-height: 100px;
-      object-fit: contain;
-    }
-    .overlayImg{
-      width:100%;
-      height:100%;
-      max-height:90%;
-      max-width:100%;
-      object-fit: contain;
-    }
-  }
-}
 }
