--- a/src/style/SessionManager.scss
+++ b/src/style/SessionManager.scss
@@ -18,6 +18,7 @@ input[type="submit" i]{
     font-size:20px;
     font-weight:1;
       border-radius: 0;
+    width:202px;
   }
   a{
     font-size:20px;
