--- a/src/style/Canvas.scss
+++ b/src/style/Canvas.scss
@@ -1,5 +1,13 @@
+
+@import "./ThemeModes";
+.three{
+  width:100%!important;
+  border-bottom: $tableBorder;
+  height:80px!important;
+}
 canvas {
-   max-width: 450px!important;
+  max-width: 450px!important;
   max-height: 80px;
+  height:80px!important;
 
 } 
