--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -8,9 +8,8 @@
   color: var(--text-primary)!important;
 }
 .contentView{
-  position:inherit;
   height:100%;
-  width:100%;
+  width:calc(100%);
 
   .p-dataview{
     height:100%;
@@ -29,12 +28,20 @@
       width:100%;
 
       .grid{
-        width:100%;
+        width:calc(100%-2px);
         height:100%;
         justify-content: flex-start;
         align-content: flex-start;
         max-height:calc(100% - 19px);
         overflow-y:auto;
+        .dgb-0{
+          
+            border-bottom: $tableBorder;
+            border-right: $tableBorder;
+            width:100%;
+            min-width:90px;
+            min-height:60px;
+        }
         
        // list 
         .w-9{
@@ -95,6 +102,35 @@
               border-bottom: $tableBorder;
             }
           }
+        }
+      }
+    }
+  }
+}
+.dataView{
+  height:100%;
+  width:100%;
+
+  .p-dataview{
+    height:100%;
+    width:100%;
+
+    .p-dataview-content{
+      height:100%;
+      width:100%;
+
+      .grid{
+        width:100%;
+        max-height:100%;
+        overflow-y:auto;
+        .dgb-0{
+          border-bottom: $tableBorder;
+          border-right: $tableBorder;
+          width:100%;
+          min-width:90px;
+          max-height:60px;
+          margin:0;
+          white-space: nowrap;
         }
       }
     }
