--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -7,6 +7,7 @@
   --border-primary: #676776;
   --border-secondary: #696967;
   --splitter-box: lightyellow;
+  --input-color: rgba(223, 223, 223, 0.5);
 }
 .theme-light {
   --background-primary: rgb(255, 255, 255);
@@ -17,6 +18,6 @@
   --color-scheme: light;
   --border-primary: #535353;
   --border-secondary: #000;
-
+  --input-color: rgba(023, 023, 023, 0.5);
   --splitter-box: purple;
 }
