--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -1,8 +1,8 @@
 @import "./ThemeModes";
-@keyframes fadeIn {
-  from: { opacity: 0; }
-  to: { opacity: 1; }
-}
+@keyframes example {
+        from {opacity: 0;}
+        to {opacity: 1;}
+    }
 .dropdown{
   background-color: var(--background-primary);
   color: var(--text-primary)!important;
@@ -34,6 +34,7 @@
         align-content: flex-start;
         max-height:calc(100% - 19px);
         overflow-y:auto;
+
         .dgb-0{
           
             border-bottom: $tableBorder;
@@ -50,7 +51,10 @@
 
         // grid
         .cgb-0{
-          
+        *{
+          animation-name: example!important;
+          animation-duration: .46s!important;
+        }
           .cgb-loading{
             outline: $tableBorder;
             max-width:90px;
@@ -74,6 +78,7 @@
 
           }
           .cgb-loaded{
+          animation-duration: 0s!important;
             outline: $tableBorder;
             max-width:90px;
             min-width:90px;
