--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -42,7 +42,7 @@
 
         // grid
         .cgb-0{
-
+          margin:1.5px;
           *{
             animation-name: example!important;
             animation-duration: .46s!important;
@@ -52,37 +52,33 @@
             outline: $tableBorder;
             max-width:90px;
             min-width:90px;
-            min-height:140px;
             
             .cgb-0-txt{
               width: 100%;
               max-height: 100px;
               overflow-y:auto;
               overflow-x:hidden;
-              border-bottom: $tableBorder;
             }
 
             .cgb-0-info{
               padding-top:102px;
               overflow:hidden;
               white-space: nowrap;
-              border-bottom: $tableBorder;
             }
 
           }
           .cgb-loaded{
+            border-collapse: collapse;
             animation-duration: 0s!important;
             outline: $tableBorder;
             max-width:90px;
             min-width:90px;
-            min-height:140px;
 
             .cgb-0-txt{
               width: 100%;
               max-height: 100px;
               overflow-y:auto;
               overflow-x:hidden;
-              border-bottom: $tableBorder;
             }
 
             .cgb-0-img {
@@ -90,13 +86,11 @@
               max-height: 100px;
               object-fit: contain;
               z-index: 0;
-              border-bottom: $tableBorder;
             }
 
             .cgb-0-info{
               overflow:hidden;
               white-space: nowrap;
-              border-bottom: $tableBorder;
             }
           }
         }
@@ -121,12 +115,27 @@
         max-height:100%;
         overflow-y:auto;
         .dgb-0{
-          cursor: pointer;
+          
+          button{
+            color:var(--link-visited);
+            font-size:1em;
+            text-align:left;
+            cursor: pointer;
+            width:100%;
+            height:100%;
+            padding:0;
+            margin: 0;
+            border:0;
+            user-select: none;
+            background:none;
+
+
+          }
+
           border-bottom: $tableBorder;
           border-right: $tableBorder;
           width:100%;
           min-width:90px;
-          max-height:60px;
           margin:0;
           white-space: nowrap;
         }
