init pane size now locked to 240px, resizes to match

--- a/src/style/Font.scss
+++ b/src/style/Font.scss
@@ -17,5 +17,5 @@
   text-decoration: none;
   transition: color, background, background-color .13s!important;
   animation-name: example;
-  animation-duration: 1s;
+  animation-duration: .57s;
 }
