--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -116,10 +116,8 @@
         overflow-y:auto;
         .dgb-0{
           
-          button{
-            color:var(--link-visited);
-            font-size:1em;
-            text-align:left;
+          .dgb-0-txt{
+
             cursor: pointer;
             width:100%;
             height:100%;
@@ -129,7 +127,16 @@
             user-select: none;
             background:none;
 
+            a{
+            color:var(--link-visited);
+            font-size:1em;
+            text-align:left;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
+
+            }
           }
 
           border-bottom: $tableBorder;
@@ -142,4 +149,24 @@
       }
     }
   }
+}
+
+.p-component, .p-component * {
+    box-sizing: border-box;
+}
+.header{
+  border-bottom: $tableBorder;
+}
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-right: -0.5rem;
+    margin-left: -0.5rem;
+    margin-top: -0.5rem;
+}
+.grid-nogutter {
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: 0;
 }
