--- a/src/style/LightBox.scss
+++ b/src/style/LightBox.scss
@@ -23,13 +23,21 @@ background: none !important;
       height:100%;
       max-width: 100%;
       max-height: 100%;
-      
+      .pdf{
+        position:relative;
+        width:100%;
+        height:100%;
+        max-height: calc(100% - 64px);
+        white-space: pre-wrap;
+      }
+
       .vue-load-image{
         position:relative;
         width:100%;
         height:100%;
         max-height: calc(100% - 64px);
-    white-space: pre-wrap;
+        white-space: pre-wrap;
+
         img {
           position:relative;
           max-width: 100%;
