--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -4,7 +4,6 @@
     background-color: rgba(0,0,0,0);
 }
 .splitpanes--vertical .splitpanes__pane{
-transition:none!important;
 }
 // middle segment
 .splitpanes.default-theme .splitpanes__splitter:before{
@@ -40,4 +39,35 @@ transition:none!important;
 }
 .splitpanes {
   height:100%;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.splitpanes--vertical .splitpanes__pane {
+    transition: width .2s ease-out;
+}
+.splitpanes__pane {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.splitpanes.default-theme .splitpanes__pane {
+    background-color: rgba(0, 0, 0, 0);
+}
+.splitpanes.default-theme .splitpanes__splitter {
+    background-color: rgba(0, 0, 0, 0);
+    border-left: 1px dotted var(--border-primary);
+    border-right: 1px dotted var(--border-primary);
+}
+.splitpanes.default-theme .splitpanes__splitter {
+    box-sizing: border-box;
+    position: relative;
+    flex-shrink: 0;
+}
+.splitpanes--vertical>.splitpanes__splitter {
+    min-width: 1px;
+    cursor: col-resize;
+}
+.splitpanes__splitter {
+    touch-action: none;
 }
