--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -12,11 +12,12 @@ $border: 21px;
 
 html {
   min-height:100dvh;
-
+  touch-action: pan-x pan-y;
   animation-duration: 0s!important;
 }
 
 html, body {
+  touch-action: pan-x pan-y;
   margin:0;
   overscroll-behavior: none;
   overflow: hidden;
@@ -34,6 +35,10 @@ html, body {
     border-top: 1px solid var(--border-secondary);
     position: relative;
       nav{
+
+        background-color: var(--background-primary);
+        position: relative;
+        z-index:3!important;
         display:flex;
         width:100%;
         height:$navH;
