--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -4,7 +4,7 @@ $dropDownBorder: 3px solid var(--border-primary);
 
 
 $navH:17px;
-$devH:100dvh;
+$devH:100vh;
 $devW:100dvw;
 
 $iosTop: env(safe-area-inset-top, 0px);
