--- a/src/style/LightBox.scss
+++ b/src/style/LightBox.scss
@@ -49,8 +49,10 @@ background: none !important;
         max-width:100%;
         height:100%;
         max-height: calc(100% - 32px);
+        white-space: pre-wrap;
+        overflow-y:auto;
 
-        img {
+          img {
           position:relative;
           max-width: 100%;
           max-height: 100%;
