--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -71,3 +71,8 @@
 .splitpanes__splitter {
     touch-action: none;
 }
+
+.default-theme.splitpanes--horizontal > .splitpanes__splitter, .default-theme .splitpanes--horizontal > .splitpanes__splitter{
+box-shadow:0px -5px 16px 3px var(--background-primary);
+    background-color:var(--background-primary);
+}
